version/0.18/_sources/api/ansys/additive/core/examples/downloads/index.rst.txt






The ``downloads.py`` module
===========================

.. py:module:: ansys.additive.core.examples.downloads


Summary
-------












.. py:currentmodule:: downloads
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~MaterialTuningExampleInputFiles`
            - Container for the example material tuning process inputs.


          * - :py:obj:`~CustomMaterialExampleFiles`
            - Holds the files associated with a custom material definition.





    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~delete_downloads`
            - Delete all downloaded examples to free space or update the files.


          * - :py:obj:`~decompress`
            - Decompress a ZIP file to the ``examples`` directory.


          * - :py:obj:`~download_10mm_cube`
            - Download an STL file describing a 10-millimeter cube.


          * - :py:obj:`~download_small_wedge_slm_build_file`
            - Download an SLM build file for a small wedge part.


          * - :py:obj:`~download_material_tuning_input`
            - Download the input files for the material tuning example.


          * - :py:obj:`~download_custom_material`
            - Download the files describing a custom material.




    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~EXAMPLES_URI`
            - URI for the example data repository.


          * - :py:obj:`~PARTS_FOLDER`
            - Folder containing example parts.


          * - :py:obj:`~BUILD_FILES_FOLDER`
            - Folder containing example build files.


          * - :py:obj:`~MATERIAL_TUNING_FOLDER`
            - Folder containing example material tuning input files.


          * - :py:obj:`~CUSTOM_MATERIAL_FOLDER`
            - Folder containing example custom material data files.












Description
-----------

Provides functions for downloading sample datasets from the PyAdditive repository.

..
    !! processed by numpydoc !!






Module detail
-------------



.. py:class:: MaterialTuningExampleInputFiles(experiment_data_file: str, material_configuration_file: str, thermal_properties_lookup_file: str, characteristic_width_lookup_file: str)

   
   Container for the example material tuning process inputs.


   :Parameters:

       **experiment_data_file** : :class:`python:str`
           Path to the experiment data file (CSV).

       **material_configuration_file** : :class:`python:str`
           Path to the material configuration file (JSON).

       **thermal_properties_lookup_file** : :class:`python:str`
           Path to the thermal properties lookup file (CSV).

       **characteristic_width_lookup_file** : :class:`python:str`
           Path to the characteristic width lookup file (CSV).














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MaterialTuningExampleInputFiles

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~experiment_data_file`
            - Path to the experiment data file (CSV).)
          * - :py:attr:`~material_configuration_file`
            - Path to the material configuration file (JSON).
          * - :py:attr:`~thermal_properties_lookup_file`
            - Path to the thermal properties lookup file (CSV).
          * - :py:attr:`~characteristic_width_lookup_file`
            - Path to the characteristic width lookup file (CSV).







Import detail
-------------

.. code-block:: python

    from ansys.additive.core.examples.downloads import MaterialTuningExampleInputFiles

Property detail
---------------
.. py:property:: experiment_data_file
   
   Path to the experiment data file (CSV).)
















   ..
       !! processed by numpydoc !!

.. py:property:: material_configuration_file
   
   Path to the material configuration file (JSON).
















   ..
       !! processed by numpydoc !!

.. py:property:: thermal_properties_lookup_file
   
   Path to the thermal properties lookup file (CSV).
















   ..
       !! processed by numpydoc !!

.. py:property:: characteristic_width_lookup_file
   
   Path to the characteristic width lookup file (CSV).
















   ..
       !! processed by numpydoc !!



    





.. py:class:: CustomMaterialExampleFiles(material_configuration_file: str, thermal_properties_lookup_file: str, characteristic_width_lookup_file: str)

   
   Holds the files associated with a custom material definition.


   :Parameters:

       **material_configuration_file** : :class:`python:str`
           Path to the material configuration file.

       **thermal_properties_lookup_file** : :class:`python:str`
           Path to the thermal properties lookup file.

       **characteristic_width_lookup_file** : :class:`python:str`
           Path to the characteristic width lookup file.














   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CustomMaterialExampleFiles

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~material_configuration_file`
            - Path to the material configuration file.
          * - :py:attr:`~thermal_properties_lookup_file`
            - Path to the thermal properties lookup file.
          * - :py:attr:`~characteristic_width_lookup_file`
            - Path to the characteristic width lookup file.







Import detail
-------------

.. code-block:: python

    from ansys.additive.core.examples.downloads import CustomMaterialExampleFiles

Property detail
---------------
.. py:property:: material_configuration_file
   
   Path to the material configuration file.
















   ..
       !! processed by numpydoc !!

.. py:property:: thermal_properties_lookup_file
   
   Path to the thermal properties lookup file.
















   ..
       !! processed by numpydoc !!

.. py:property:: characteristic_width_lookup_file
   
   Path to the characteristic width lookup file.
















   ..
       !! processed by numpydoc !!



    



.. py:function:: delete_downloads()

   
   Delete all downloaded examples to free space or update the files.
















   ..
       !! processed by numpydoc !!

.. py:function:: decompress(filename, subdir=None) -> str

   
   Decompress a ZIP file to the ``examples`` directory.


   :Parameters:

       **filename** : :class:`python:str`
           Name of the file.

       **subdir** : :class:`python:str`, :data:`python:None`
           Name of the subdirectory of the ``examples`` directory
           to extract the ZIP file contents to. The default is ``None``.

   :Returns:

       :class:`python:str`
           Path to the decompressed contents of the ZIP file.













   ..
       !! processed by numpydoc !!

.. py:function:: download_10mm_cube()

   
   Download an STL file describing a 10-millimeter cube.
















   ..
       !! processed by numpydoc !!

.. py:function:: download_small_wedge_slm_build_file()

   
   Download an SLM build file for a small wedge part.
















   ..
       !! processed by numpydoc !!

.. py:function:: download_material_tuning_input() -> MaterialTuningExampleInputFiles

   
   Download the input files for the material tuning example.
















   ..
       !! processed by numpydoc !!

.. py:function:: download_custom_material() -> CustomMaterialExampleFiles

   
   Download the files describing a custom material.
















   ..
       !! processed by numpydoc !!

.. py:data:: EXAMPLES_URI
   :value: 'https://github.com/ansys/example-data/raw/master'


   
   URI for the example data repository.
















   ..
       !! processed by numpydoc !!

.. py:data:: PARTS_FOLDER
   :value: 'pyadditive/part-only'


   
   Folder containing example parts.
















   ..
       !! processed by numpydoc !!

.. py:data:: BUILD_FILES_FOLDER
   :value: 'pyadditive/buildfiles'


   
   Folder containing example build files.
















   ..
       !! processed by numpydoc !!

.. py:data:: MATERIAL_TUNING_FOLDER
   :value: 'pyadditive/material_tuning_input'


   
   Folder containing example material tuning input files.
















   ..
       !! processed by numpydoc !!

.. py:data:: CUSTOM_MATERIAL_FOLDER
   :value: 'pyadditive/custom_material_data'


   
   Folder containing example custom material data files.
















   ..
       !! processed by numpydoc !!



